language/move-prover/tests/sources/functional/return_values.exp
Move prover returns: exiting with boogie verification errors
error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/return_values.move:16:9 ───
    │
 16 │         ensures result_1 == 2;
    │         ^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/return_values.move:29:5: one_two_wrapper_incorrect (entry)
    =     at tests/sources/functional/return_values.move:2:5: one_two (entry)
    =     at tests/sources/functional/return_values.move:3:9: one_two
    =         result_1 = <redacted>,
    =         result_2 = <redacted>
    =     at tests/sources/functional/return_values.move:2:5: one_two (exit)
    =     at tests/sources/functional/return_values.move:30:9: one_two_wrapper_incorrect
    =         result_1 = <redacted>,
    =         result_2 = <redacted>
    =     at tests/sources/functional/return_values.move:29:5: one_two_wrapper_incorrect (exit)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/return_values.move:59:9 ───
    │
 59 │         ensures false;
    │         ^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/return_values.move:55:5: true_one_wrapper_incorrect (entry)
    =     at tests/sources/functional/return_values.move:38:5: true_one (entry)
    =     at tests/sources/functional/return_values.move:39:9: true_one
    =         result_1 = <redacted>,
    =         result_2 = <redacted>
    =     at tests/sources/functional/return_values.move:38:5: true_one (exit)
    =     at tests/sources/functional/return_values.move:56:9: true_one_wrapper_incorrect
    =         result_1 = <redacted>,
    =         result_2 = <redacted>
    =     at tests/sources/functional/return_values.move:55:5: true_one_wrapper_incorrect (exit)
